Compile++

With older gcc at least there is a forward declaration error w/o explicit include.

BUG: 372821
Revewed-by: Martin Gräßlin