debug_console.cpp
@@ -27,6 +27,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #include "unmanaged.h"
 #include "wayland_server.h"
 #include "workspace.h"
+#include "keyboard_input.h"
 #if HAVE_INPUT
 #include "libinput/connection.h"
 #include "libinput/device.h"
